// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display/ hide (search/ clear )icon when (showIcon/ showClear )props are set to (false/ true) 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1ja162e-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value="test"
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Clear"
                  className="cancel-icon"
                  height="20px"
                  onClick={undefined}
                  viewBox="0 0 24 24"
                  width="20px"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Clear
                  </title>
                  <path
                    d="M0 0h24v24H0V0z"
                    fill="none"
                  />
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should not render expanded dropdown when expandSuggestionsContainer prop is set to false 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="input-addon css-spn60n-InputAddon e17q0a5m0"
        >
          <h3>
             Before
          </h3>
        </div>
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={true}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
          <ul
            className=" css-avkrty"
          >
            <li
              id="MockSearchBox-downshift-item-0"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "justifyContent": "flex-start",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "padding": "0 10px 0 0",
                  }
                }
              >
                <svg
                  alt="Recent Search"
                  className={null}
                  height="20"
                  style={
                    Object {
                      "fill": "#707070",
                    }
                  }
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                  />
                </svg>
              </div>
              <div
                className="trim"
              >
                <div
                  className="css-12fugvv-highlightedStyling"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "harry potter",
                    }
                  }
                />
              </div>
              <button
                className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
                  />
                </svg>
              </button>
            </li>
            <li
              id="MockSearchBox-downshift-item-1"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "justifyContent": "flex-start",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "padding": "0 10px 0 0",
                  }
                }
              >
                <svg
                  alt="Recent Search"
                  className={null}
                  height="20"
                  style={
                    Object {
                      "fill": "#707070",
                    }
                  }
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M13 3c-4.97 0-9 4.03-9 9H1l3.89 3.89.07.14L9 12H6c0-3.87 3.13-7 7-7s7 3.13 7 7-3.13 7-7 7c-1.93 0-3.68-.79-4.94-2.06l-1.42 1.42C8.27 19.99 10.51 21 13 21c4.97 0 9-4.03 9-9s-4.03-9-9-9zm-1 5v5l4.28 2.54.72-1.21-3.5-2.08V8H12z"
                  />
                </svg>
              </div>
              <div
                className="trim"
              >
                <div
                  className="css-12fugvv-highlightedStyling"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "complete night harry potter film wizardry boxed set",
                    }
                  }
                />
              </div>
              <button
                className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
                  />
                </svg>
              </button>
            </li>
            <li
              id="MockSearchBox-downshift-item-2"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "justifyContent": "flex-start",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "padding": "0 10px 0 0",
                  }
                }
              >
                <svg
                  alt="Popular Search"
                  className={null}
                  height="20"
                  style={
                    Object {
                      "fill": "#707070",
                    }
                  }
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M16 6l2.29 2.29-4.88 4.88-4-4L2 16.59 3.41 18l6-6 4 4 6.3-6.29L22 12V6z"
                  />
                </svg>
              </div>
              <div
                className="trim"
              >
                <div
                  className="css-12fugvv-highlightedStyling"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "harry potter <b class=\\"highlight\\">complete series</b>",
                    }
                  }
                />
              </div>
              <button
                className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
                  />
                </svg>
              </button>
            </li>
            <li
              id="MockSearchBox-downshift-item-3"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "justifyContent": "flex-start",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "padding": "0 10px 0 0",
                  }
                }
              >
                <svg
                  alt="promoted search"
                  className={null}
                  height="20"
                  style={
                    Object {
                      "fill": "#707070",
                    }
                  }
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"
                  />
                </svg>
              </div>
              <div
                className="trim"
              >
                <div
                  className="css-12fugvv-highlightedStyling"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "night harry potter film wizardry boxed set",
                    }
                  }
                />
              </div>
              <button
                className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
                  />
                </svg>
              </button>
            </li>
            <li
              id="MockSearchBox-downshift-item-4"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "justifyContent": "flex-start",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "padding": "0 10px 0 0",
                  }
                }
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "fill": "#707070",
                      "left": "3px",
                      "marginRight": "8px",
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
              <div
                className="trim"
              >
                <div
                  className="css-12fugvv-highlightedStyling"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "harry potter <b class=\\"highlight\\">film wizardry</b>",
                    }
                  }
                />
              </div>
              <button
                className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
                  />
                </svg>
              </button>
            </li>
            <li
              id="MockSearchBox-downshift-item-5"
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseMove={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#fff",
                  "justifyContent": "flex-start",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "padding": "0 10px 0 0",
                  }
                }
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "fill": "#707070",
                      "left": "3px",
                      "marginRight": "8px",
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
              <div
                className="trim"
              >
                <div
                  className="css-12fugvv-highlightedStyling"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "harry potter <b class=\\"highlight\\">boxed set</b>",
                    }
                  }
                />
              </div>
              <button
                className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
                  />
                </svg>
              </button>
            </li>
          </ul>
        </div>
        <div
          className="input-addon css-spn60n-InputAddon e17q0a5m0"
        >
          <h3>
             After
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render (prefixed/ suffixed) UI nodes with searchbox when (addonBefore/ addonAfter) prop is set 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="input-addon css-spn60n-InputAddon e17q0a5m0"
        >
          <h3>
             Before
          </h3>
        </div>
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          className="input-addon css-spn60n-InputAddon e17q0a5m0"
        >
          <h3>
             After
          </h3>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render SearchBox 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render SearchBox with title 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <h2
      className="css-1dd55xt-Title e1u1u4gy0"
    >
      Mock SearchBox
    </h2>
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render custom (search/ clear icon/ recent search icon/ popular search icon) when (icon/ clearIcon/ recentSearchesIcon/ popularSearchesIcon )props are set 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={true}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-tvunh4-Input-input-Input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value="harry test"
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <span
                  aria-label="books-icon"
                  role="img"
                >
                  ❌
                </span>
              </div>
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <span
                  aria-label="books-icon"
                  role="img"
                >
                  📚
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        className=" css-avkrty"
      >
        <li
          id="MockSearchBox-downshift-item-0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <div
              className="recent-icon"
            >
              <svg
                alt="Recent Icon"
                height="200"
                viewBox="0 0 212.982 212.982"
                width="200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
                />
              </svg>
            </div>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "harry potter",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
        <li
          id="MockSearchBox-downshift-item-1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <div
              className="recent-icon"
            >
              <svg
                alt="Recent Icon"
                height="200"
                viewBox="0 0 212.982 212.982"
                width="200"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
                />
              </svg>
            </div>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "complete night harry potter film wizardry boxed set",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
        <li
          id="MockSearchBox-downshift-item-2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <div
              className="popular-icon"
            >
              <svg
                alt="Popular Icon"
                height="250"
                viewBox="0 0 212.982 212.982"
                width="250"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10.19 1.5s.49 1.99.49 3.6c0 1.55-1.01 2.8-2.56 2.8S5.4 6.65 5.4 5.1l.02-.27C3.91 6.64 3 8.96 3 11.5c0 3.31 2.69 6 6 6s6-2.69 6-6c0-4.05-1.88-7.65-4.81-10zM8.91 15c-1.34 0-2.42-1.05-2.42-2.35 0-1.22.78-2.07 2.11-2.34 1.33-.27 2.7-.91 3.46-1.93.29.97.45 1.99.45 3.03 0 1.98-1.62 3.59-3.6 3.59z"
                />
              </svg>
            </div>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "harry potter <b class=\\"highlight\\">complete series</b>",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
        <li
          id="MockSearchBox-downshift-item-3"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <svg
              alt="promoted search"
              className={null}
              height="20"
              style={
                Object {
                  "fill": "#707070",
                }
              }
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 .587l3.668 7.568 8.332 1.151-6.064 5.828 1.48 8.279-7.416-3.967-7.417 3.967 1.481-8.279-6.064-5.828 8.332-1.151z"
              />
            </svg>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "night harry potter film wizardry boxed set",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
        <li
          id="MockSearchBox-downshift-item-4"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <svg
              alt="Search"
              className="search-icon"
              height="12"
              style={
                Object {
                  "fill": "#707070",
                  "left": "3px",
                  "marginRight": "8px",
                  "position": "relative",
                  "transform": "scale(1.35)",
                }
              }
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Search
              </title>
              <path
                d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
              />
            </svg>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "harry potter <b class=\\"highlight\\">film wizardry</b>",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
        <li
          id="MockSearchBox-downshift-item-5"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <svg
              alt="Search"
              className="search-icon"
              height="12"
              style={
                Object {
                  "fill": "#707070",
                  "left": "3px",
                  "marginRight": "8px",
                  "position": "relative",
                  "transform": "scale(1.35)",
                }
              }
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Search
              </title>
              <path
                d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
              />
            </svg>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "harry potter <b class=\\"highlight\\">boxed set</b>",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render custom dropdown UI when render prop is set 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={true}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "border": "1px solid #ddd",
            "borderRadius": 4,
            "color": "#424242",
            "fontSize": "0.9rem",
            "marginTop": 10,
            "padding": 10,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <div>
          <div
            id="MockSearchBox-downshift-item-0"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            style={
              Object {
                "background": "transparent",
                "padding": 10,
              }
            }
          >
            harry potter
          </div>
          <div
            id="MockSearchBox-downshift-item-1"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            style={
              Object {
                "background": "transparent",
                "padding": 10,
              }
            }
          >
            complete night harry potter film wizardry boxed set
          </div>
          <div
            id="MockSearchBox-downshift-item-2"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            style={
              Object {
                "background": "transparent",
                "padding": 10,
              }
            }
          >
            harry potter complete series
          </div>
          <div
            id="MockSearchBox-downshift-item-3"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            style={
              Object {
                "background": "transparent",
                "padding": 10,
              }
            }
          >
            night harry potter film wizardry boxed set
          </div>
          <div
            id="MockSearchBox-downshift-item-4"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseMove={[Function]}
            style={
              Object {
                "background": "transparent",
                "padding": 10,
              }
            }
          >
            harry potter film wizardry
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render default suggestions when defaultSuggestions prop is set 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={true}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
      <ul
        className=" css-avkrty"
      >
        <li
          id="MockSearchBox-downshift-item-0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <svg
              alt="Search"
              className="search-icon"
              height="12"
              style={
                Object {
                  "fill": "#707070",
                  "left": "3px",
                  "marginRight": "8px",
                  "position": "relative",
                  "transform": "scale(1.35)",
                }
              }
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Search
              </title>
              <path
                d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
              />
            </svg>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<mark class=\\"highlight\\"></mark>S<mark class=\\"highlight\\"></mark>h<mark class=\\"highlight\\"></mark>e<mark class=\\"highlight\\"></mark>r<mark class=\\"highlight\\"></mark>l<mark class=\\"highlight\\"></mark>o<mark class=\\"highlight\\"></mark>c<mark class=\\"highlight\\"></mark>k<mark class=\\"highlight\\"></mark> <mark class=\\"highlight\\"></mark>H<mark class=\\"highlight\\"></mark>o<mark class=\\"highlight\\"></mark>l<mark class=\\"highlight\\"></mark>m<mark class=\\"highlight\\"></mark>e<mark class=\\"highlight\\"></mark>s<mark class=\\"highlight\\"></mark>",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
        <li
          id="MockSearchBox-downshift-item-1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "justifyContent": "flex-start",
            }
          }
        >
          <div
            style={
              Object {
                "display": "flex",
                "padding": "0 10px 0 0",
              }
            }
          >
            <svg
              alt="Search"
              className="search-icon"
              height="12"
              style={
                Object {
                  "fill": "#707070",
                  "left": "3px",
                  "marginRight": "8px",
                  "position": "relative",
                  "transform": "scale(1.35)",
                }
              }
              viewBox="0 0 15 15"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Search
              </title>
              <path
                d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
              />
            </svg>
          </div>
          <div
            className="trim"
          >
            <div
              className="css-12fugvv-highlightedStyling"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<mark class=\\"highlight\\"></mark>T<mark class=\\"highlight\\"></mark>h<mark class=\\"highlight\\"></mark>e<mark class=\\"highlight\\"></mark> <mark class=\\"highlight\\"></mark>L<mark class=\\"highlight\\"></mark>o<mark class=\\"highlight\\"></mark>r<mark class=\\"highlight\\"></mark>d<mark class=\\"highlight\\"></mark> <mark class=\\"highlight\\"></mark>o<mark class=\\"highlight\\"></mark>f<mark class=\\"highlight\\"></mark> <mark class=\\"highlight\\"></mark>t<mark class=\\"highlight\\"></mark>h<mark class=\\"highlight\\"></mark>e<mark class=\\"highlight\\"></mark> <mark class=\\"highlight\\"></mark>R<mark class=\\"highlight\\"></mark>i<mark class=\\"highlight\\"></mark>n<mark class=\\"highlight\\"></mark>g<mark class=\\"highlight\\"></mark>s<mark class=\\"highlight\\"></mark>",
                }
              }
            />
          </div>
          <button
            className="css-1v5irkf-AutofillSvgIcon ei74nfu0"
            onClick={[Function]}
          >
            <svg
              viewBox="0 0 24 24"
            >
              <path
                d="M8 17v-7.586l8.293 8.293c0.391 0.391 1.024 0.391 1.414 0s0.391-1.024 0-1.414l-8.293-8.293h7.586c0.552 0 1-0.448 1-1s-0.448-1-1-1h-10c-0.552 0-1 0.448-1 1v10c0 0.552 0.448 1 1 1s1-0.448 1-1z"
              />
            </svg>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`should render search icon on the right 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={true}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-vbr4rg-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render with a default value when defaultValue prop is set 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value="test"
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            />
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should show voice search when showVoiceSearch prop is set 1`] = `
<div
  className="css-15g0dol-Base eay43c90"
  style={Object {}}
>
  <div
    className="css-a9jdxq-Container efy4jxw0"
    style={Object {}}
  >
    <div
      className="css-3cr1qg-suggestionsContainer"
    >
      <div
        className="input-group css-115oy78-InputGroup er4s8x50"
      >
        <div
          className="css-cfyl0p-InputWrapper egum9cz0"
        >
          <input
            aria-activedescendant={null}
            aria-autocomplete="list"
            aria-expanded={false}
            aria-label="MockSearchBox"
            autoComplete="off"
            autoFocus={undefined}
            className=" css-1q50ph4-Input-input-Input enqjda90"
            id="MockSearchBox-downshift-input"
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyPress={undefined}
            onKeyUp={undefined}
            placeholder="Search"
            role="combobox"
            type={undefined}
            value=""
          />
          <div>
            <div
              className="css-1lopc3h-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              
            </div>
            <div
              className="css-cvkjd4-IconGroup-IconGroup-IconGroup e11erhna0"
            >
              <div
                className="css-1k0hmue-IconWrapper ekh9j6r0"
                onClick={[Function]}
              >
                <svg
                  alt="Search"
                  className="search-icon"
                  height="12"
                  style={
                    Object {
                      "position": "relative",
                      "transform": "scale(1.35)",
                    }
                  }
                  viewBox="0 0 15 15"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    Search
                  </title>
                  <path
                    d=" M6.02945,10.20327a4.17382,4.17382,0,1,1,4.17382-4.17382A4.15609,4.15609, 0,0,1,6.02945,10.20327Zm9.69195,4.2199L10.8989,9.59979A5.88021,5.88021, 0,0,0,12.058,6.02856,6.00467,6.00467,0,1,0,9.59979,10.8989l4.82338, 4.82338a.89729.89729,0,0,0,1.29912,0,.89749.89749,0,0,0-.00087-1.29909Z "
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
